booklore/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: booklore
  name: booklore
spec:
  finalizers:
    - kubernetes
