booklore/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booklore
  namespace: booklore
  labels:
    app: booklore
spec:
  selector:
    matchLabels:
      app: booklore
  replicas: 1
  template:
    metadata:
      name: booklore
      labels:
        app: booklore
    spec:
      containers:
        - name: booklore
          image: booklore/booklore:v1.17.0
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 6060
          volumeMounts:
            - mountPath: "/app/data"
              name: app-data
            - mountPath: "/books"
              name: books
            - mountPath: "/bookdrop"
              name: bookdrop
        - name: mariadb
          image: lscr.io/linuxserver/mariadb:11.4.5
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          volumeMounts:
            - mountPath: "/app/data"
              name: db-storage
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: app-data
        - name: books
          persistentVolumeClaim:
            claimName: books-location
        - name: bookdrop
          emptyDir:  # not planning to use bookdrop; change this if you do
            sizeLimit: 10Mi
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-storage
