booklore/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booklore
  namespace: booklore
  labels:
    app: booklore
spec:
  selector:
    app: booklore
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6060
